<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/daily_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/date"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/uneditable_inc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/daily_date"
                android:textSize="18sp"
                android:text="@string/income"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/daily_inc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="20sp"
                android:layout_below="@+id/daily_date"
                android:layout_toRightOf="@+id/uneditable_inc"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="Inc"
                android:drawableStart="@drawable/rupeesymbol"
                />
            <TextView
                android:id="@+id/uneditable_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/daily_date"
                android:layout_toRightOf="@+id/daily_inc"
                android:textSize="18sp"
                android:text="@string/expense"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/daily_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="20sp"
                android:layout_below="@+id/daily_date"
                android:layout_toRightOf="@+id/uneditable_exp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="Exp"
                android:drawableStart="@drawable/rupeesymbol"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>