<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ahuja.expensemanager.Insert_Transaction"
    tools:showIn="@layout/activity_insert__transaction">
   <LinearLayout
       android:layout_margin="8dp"
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <android.support.v7.widget.AppCompatImageView
           android:layout_marginTop="10dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/desc"/>
    <android.support.design.widget.TextInputEditText
        android:id="@+id/insert_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:hint="What is the money for?"
        android:textSize="20sp"
        />
   </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.v7.widget.AppCompatImageView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/inr"/>
        <android.support.design.widget.TextInputEditText
        android:id="@+id/insert_amnt"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amnt"
        android:inputType="numberDecimal"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/date"/>
        <TextView
            android:id="@+id/insert_date"
            android:layout_width="0dp"
            android:text="@string/date"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/insert_type_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="17sp"
            android:layout_marginLeft="3dp"/>
        <GridLayout
            android:layout_marginTop="8dp"
            android:rowCount="2"
            android:columnCount="4"
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <android.support.design.widget.CheckableImageButton
            style="?android:attr/borderlessButtonStyle"
            android:layout_column="0"
            android:layout_row="0"
            android:onClick="bill"
            android:src="@drawable/receipt"
            android:background="@drawable/select_type"
            android:id="@+id/insert_type_bill"/>

            <android.support.design.widget.CheckableImageButton
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/select_type"
                android:layout_column="1"
                android:layout_row="0"
                android:onClick="food"
                android:src="@drawable/restaurant"
                android:id="@+id/insert_type_food"/>
            <android.support.design.widget.CheckableImageButton
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/select_type"
                android:layout_column="2"

                android:layout_row="0"
                android:onClick="entertainment"
                android:src="@drawable/clapperboard"
                android:id="@+id/insert_type_entertainment"/>
            <android.support.design.widget.CheckableImageButton
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/select_type"
                android:layout_column="3"
                android:layout_row="0"
                android:onClick="family"
                android:src="@drawable/incomes"
                android:id="@+id/insert_type_family"/>
            <android.support.design.widget.CheckableImageButton
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/select_type"
                android:layout_column="0"
                android:layout_row="1"
                android:onClick="personel"
                android:src="@drawable/avatar"
                android:id="@+id/insert_type_personel"/>
            <android.support.design.widget.CheckableImageButton
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/select_type"
                android:layout_column="1"
                android:layout_row="1"
                android:onClick="saving"
                android:src="@drawable/saving"
                android:id="@+id/insert_type_saving"/>
            <android.support.design.widget.CheckableImageButton
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/select_type"
                android:layout_column="2"
                android:layout_row="1"
                android:onClick="travel"
                android:src="@drawable/plane"
                android:id="@+id/insert_type_travel">
            </android.support.design.widget.CheckableImageButton>
            <android.support.design.widget.CheckableImageButton
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/select_type"
                android:layout_column="3"
                android:layout_row="1"
                android:onClick="recoverable"
                android:src="@drawable/icon"
                android:id="@+id/insert_type_recoverable"/>
        </GridLayout>


    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/partition_tv"
            android:layout_above="@+id/buttonadd"
            />
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/bt_design_save"
            android:id="@+id/buttonadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_another"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true" />
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/bt_design_save"
            android:id="@+id/b_add"
            android:text="Save"
            android:layout_marginRight="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>
